--- a/docs/src/ui/Header.module.scss
+++ b/docs/src/ui/Header.module.scss
@@ -18,55 +18,84 @@
 
 .header {
   height: 60px;
-  display: flex;
-  align-items: center;
-  nav {
-    flex: 1 0 0;
-    padding-left: 50px;
-    @include small-screen() {
-      padding-left: 0;
+  text-align: center;
+  @include wide-screen {
+    display: flex;
+    align-items: center;
+  }
+  position: relative;
+}
+
+
+@include small-screen {
+  .menuVisible {
+    .header nav {
+      left: 0;
+    }
+  }
+  .header nav {
+    text-align: left;
+    background-color: white;
+    position: fixed;
+    left: -200px;
+    top: 60px;
+    padding-top: 20px;
+    bottom: 0;
+    width: 200px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.2);
+    transition: left .15s ease-in-out;
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      a {
+        padding: 7px 14px;
+        display: block;
+        &:active {
+          background-color: aliceblue;
+        }
+      }
     }
   }
 }
-
-.header nav {
-  display: inline-block;
-  vertical-align: middle;
-  @include small-screen() {
-    position: absolute;
-    top: calc(100vh - 45px);
-    left: 0;
-    right: 0;
-    background: white;
-    border-top: 1px solid $border-color;
+@include wide-screen() {
+  nav {
+    flex: 1 0 0;
+    padding-left: 50px;
   }
-  ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: auto;
-  }
-  li {
-    display: inline-flex;
+  .header nav {
+    display: inline-block;
     vertical-align: middle;
-    &:last-child {
-      width: 100%;
-      flex: 1 0 0;
-      align-content: flex-end;
-      a {
-        text-align: right;
-      }
+    ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      overflow: auto;
     }
-    text-align: center;
-    a {
-      text-transform: uppercase;
-      white-space: nowrap;
-      @include wide-screen() {
-        padding: 0 20px;
+    li {
+      display: inline-flex;
+      vertical-align: middle;
+      &:last-child {
+        width: 100%;
+        flex: 1 0 0;
+        align-content: flex-end;
+        a {
+          text-align: right;
+        }
       }
-      @include small-screen() {
-        padding: 10px 15px;
+      text-align: center;
+      a {
+        text-transform: uppercase;
+        white-space: nowrap;
+        @include wide-screen() {
+          padding: 0 20px;
+        }
+        @include small-screen() {
+          padding: 10px 15px;
+        }
       }
     }
   }
@@ -76,9 +105,28 @@
   display: inline-block;
   vertical-align: middle;
   @include small-screen() {
-    width: 100%;
+    position: relative;
     text-align: center;
+    top: 10px;
   }
+}
+
+.headerMenuButton {
+  @include wide-screen {
+    display: none;
+  }
+  width: 30px;
+  height: 20px;
+  position: absolute;
+  left: 5px;
+  top: 20px;
+  z-index: 2;
+  background-image: url('../images/nav.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 0;
+  border-radius: 0;
+  background-color: transparent;
 }
 
 .active {
